# gd-attempt-history

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
src/: attempt.hpp  attempt_history.fbs  attempt_history.hpp  core.hpp  dllmain.cpp  game_manager.hpp  level.cpp  level.hpp  logger.hpp  pch.hpp  player.cpp  player.hpp  session.cpp  session.hpp
src/fbs/: attempt_history.fbs  attempt_history.fbs.h  attempt_history.h
src/gd_hooking/: detours.hpp  tramps.hpp
